fix text overflow breaking styling

--- a/meal-ui/src/styles/local/partials/2-components/image-card/image-card.scss
+++ b/meal-ui/src/styles/local/partials/2-components/image-card/image-card.scss
@@ -36,6 +36,9 @@
 	h4 {
 		font-size: 1.4em;
 		letter-spacing: 4px;
+		text-overflow: ellipsis;
+		overflow: hidden;
+		white-space: nowrap;
 	}
 
 	label {
